feat(api): support multi-label filtering
